@@ -110,3 +110,21 @@ Description: debug symbols for libraries from radare suite
  hash utility called rahash.
  .
  This package provides the debug symbols for the libraries of radare2.
+
+Package: libradare2-common
+Architecture: all
+Depends: ${misc:Depends}
+Description: arch independent files from the radare2 suite
+ The project aims to create a complete, portable, multi-architecture,
+ unix-like toolchain for reverse engineering.
+ .
+ It is composed by an hexadecimal editor (radare) with a wrapped IO
+ layer supporting multiple backends for local/remote files, debugger
+ (osx,bsd,linux,w32), stream analyzer, assembler/disassembler (rasm)
+ for x86,arm,ppc,m68k,java,msil,sparc code analysis modules and
+ scripting facilities. A bindiffer named radiff, base converter (rax),
+ shellcode development helper (rasc), a binary information extractor
+ supporting (pe, mach0, elf, class, ...) named rabin, and a block-based
+ hash utility called rahash.
+ .
+ This package provides the arch independent files from radare2.
